--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Sarah Siegel</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Waddup it's ya girl Sarah with the fat bars coming at ya.</p>
       <h1>Where I'm From</h1>
       <p>Details here...</p>
       <h1>What are your favorite hobbies?</h1>
