--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>Plymouth Minnesota</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy hiking and spending time in nature with my dog and having quality time with my family.</p>
       <h1>What's your dream job?</h1>
       <p>Details here...</p>
       <h1>Where do you live?</h1>
