Changed dream job

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <h1>What are your favorite hobbies?</h1>
       <p>I enjoy hiking and spending time in nature with my dog and having quality time with my family.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To travel the world as a web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Plymouth Minnesota </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer to because I enjoy being creative and using my knowledge to improve things around me</p>
     </section>
 
     <footer id="footer">
