Changed where do you live?

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <h1>What's your dream job?</h1>
       <p>To travel the world as a web developer</p>
       <h1>Where do you live?</h1>
-      <p>Plymouth Minnesota </p>
+      <p>Plymouth, Minnesota </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to be a web developer to because I enjoy being creative and using my knowledge to improve things around me</p>
+      <p>I want to be a web developer because I enjoy being creative and using my knowledge to improve things around me</p>
     </section>
 
     <footer id="footer">
