Changed why do you want to be a web developer?

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Plymouth, Minnesota </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to be a web developer because I enjoy being creative and using my knowledge to improve things around me</p>
+      <p>I want to be a web developer because I enjoy being creative and using my knowledge and ideas to improve things around me</p>
     </section>
 
     <footer id="footer">
